Thu May  3 16:00:15 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Malloc.h:
	* ace/PI_Malloc.h: Fixed the [PI_]Control_Block size estimation
	  macros.  I added a new member to control block.

Thu May  3 14:52:33 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/CDR_Stream.h (ACE_InputCDR):
	* ace/CDR_Stream.cpp: Removed the method steal_data () as it did
	  not serve the purpose.  Added a new method exchange_data_blocks
	  (). This method exchanges data_blocks between two CDR
	  streams. The write and read pointers are also exchanged. This
	  method performs no allocation and no releases and is lock free.

Thu May  3 06:58:29 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Acceptor.{h,cpp},
	* ace/SOCK_Acceptor.{h,cpp}:  When the number of clients
	  connecting to a server exceeds the process handle limit the
 	  server would busy loop.  The Acceptor accept_svc_handler()
 	  method is called which (1) constructs a handler and (2) attempts
 	  to accept the connection, which fails (because there is no
 	  available handle).  The handler is destructed, but the connect
 	  request is still queued and so the acceptor gets called back
 	  again.... and so on until one of the client which is already
 	  connected disconnects and frees up a descriptor.  Changed the
 	  Acceptor the close and reopen the connection when accept()
 	  fails.  A check is done to make sure address reuse is set. So
 	  this fix will only work in case where it is set.  Thanks to
 	  Dominic Hughes <dominic@aersoft.ie> for this fix.

	* ace/Unbounded_Queue.h: The comment was incorrect for
	  ~ACE_Unbounded_Queue.  Thanks to Johnny Willemsen for
	  reporting this.

Thu May  3 08:00:56 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/ASX/Event_Server/Event_Server/Options.cpp:
	* examples/ASX/UPIPE_Event_Server/Options.cpp: Warning fixes that
	  missed my earlier fix. This warning will appear only in the