@@ -66,8 +66,8 @@ ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::open
   ACE_TRACE ("ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::open");
   this->flags_ = flags;
   this->use_select_ = use_select;
-  this->reuse_addr_ = reuse_addr; 
-  this->peer_acceptor_addr_ = local_addr; 
+  this->reuse_addr_ = reuse_addr;
+  this->peer_acceptor_addr_ = local_addr;
 
   // Must supply a valid Reactor to Acceptor::open()...
 
@@ -103,9 +103,9 @@ ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::open
 template <class SVC_HANDLER, ACE_PEER_ACCEPTOR_1>
 ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::ACE_Acceptor (ACE_Reactor *reactor,
                                                               int use_select)
-  : use_select_ (use_select),
-    flags_ (0),
-    reuse_addr_ (1) 
+  :flags_ (0),
+   use_select_ (use_select),
+   reuse_addr_ (1)
 {
   ACE_TRACE ("ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::ACE_Acceptor");
 
@@ -292,7 +292,7 @@ ACE_Acceptor<SVC_HANDLER, ACE_PEER_ACCEPTOR_2>::accept_svc_handler
 
       // If <reuse_addr> is true then we will close the socket and
       // open it again...
-      if (this->reuse_addr_) 
+      if (this->reuse_addr_)
         {
           this->peer_acceptor_.close ();
           this->peer_acceptor_.open (this->peer_acceptor_addr_,
